--- a/html/Spam_Email_Classification_Using_BERT.html
+++ b/html/Spam_Email_Classification_Using_BERT.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classifying SPAM Email using BERT</title>
     <link rel="icon" type="image/png" href="https://i.imgur.com/IUThkpz.png">
-    <link rel="stylesheet" href="https://github.com/hugohiraoka/Spam_Email_Classification_Using_BERT/tree/main/html/css/style_default_jpnb.css">
+    <link rel="stylesheet" href="/main/html/css/style_default_jpnb.css">
     <link rel="stylesheet" href="style_root_jpnb.css">
     <link rel="stylesheet" href="style_this_jpnb.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
