--- a/html/Spam_Email_Classification_Using_BERT.html
+++ b/html/Spam_Email_Classification_Using_BERT.html
@@ -6,12 +6,12 @@
     <title>Classifying SPAM Email using BERT</title>
     <link rel="icon" type="image/png" href="https://i.imgur.com/IUThkpz.png">
     <link rel="stylesheet" href="css/style_default_jpnb.css">
-    <link rel="stylesheet" href="style_root_jpnb.css">
-    <link rel="stylesheet" href="style_this_jpnb.css">
+    <link rel="stylesheet" href="css/style_root_jpnb.css">
+    <link rel="stylesheet" href="css/style_this_jpnb.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
-    <script src="default_jpnb.js"></script>
-    <script src="this_jpnb.js"></script>
+    <script src="js/default_jpnb.js"></script>
+    <script src="js/this_jpnb.js"></script>
 
 </head>
 
